<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Actions">

    <Button
        android:id="@+id/button"
        android:layout_width="227dp"
        android:layout_height="46dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="88dp"
        android:onClick="addGas"
        android:text="@string/add_gas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="227dp"
        android:layout_height="46dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="280dp"
        android:onClick="removeCar"
        android:text="@string/remove"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="227dp"
        android:layout_height="46dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="152dp"
        android:onClick="listGas"
        android:text="@string/view_gases"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="227dp"
        android:layout_height="46dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="216dp"
        android:onClick="editCar"
        android:text="@string/edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>